# data-expressions

./: .buildinfo  .gitattributes  CNAME  README.md  altair-intro.html  altair.html  colorado.html  colorado_geomap.html  genindex.html  index.html  intro.html  markdown-notebooks.html  markdown.html  netlify.toml  notebooks.html  objects.inv  oj_search.html  pyproject.toml  references.html  search.html  searchindex.js
Chapter 7/: polars_book_draft.html
_sources/: altair.ipynb  intro.md  markdown-notebooks.ipynb  references.md
_sources/data-poetry/: aoc_stats.ipynb  owlready2_intro.ipynb
_sources/personal-analysis/: polars-chapter.ipynb
_sources/step-by-step/: altair-1-bar-chart.ipynb  altair-2-scatter-chart.ipynb  altair.ipynb  openai_polars.ipynb  plotly-express-1-bar-chart.ipynb  plotly-express.ipynb  plotly.ipynb  step-by-step-altair.md  step-by-step-intro.md  step-by-step-plotly.md
data-poetry/: aoc_day3.html  aoc_stats.html  data_viz_dilemma.html  owlready2_intro.html  polars.html  polars_viz_intro.html  why_visualization_is_important.html
mynewbook/: _config.yml  _toc.yml  altair-intro.ipynb  altair.ipynb  intro.md  netlify.toml  notebooks.ipynb  references.md
mynewbook/data-poetry/: aoc_day3.html  data_viz_dilemma.ipynb  owlready2_intro.ipynb  polars.md  polars_viz_intro.ipynb
personal-analysis/: factual_consistency_metric.html  personal-analysis.html  pie_graph_art.html  playground.html
polars/: polars.html
step-by-step/: altair-1-bar-chart.html  altair-2-scatter-chart.html  altair.html  openai_polars.html  plotly-express-1-bar-chart.html  plotly-express-intro.html  plotly-express.html  plotly.html  step-by-step-altair.html  step-by-step-intro.html  step-by-step-plotly.html
(+119 files in other folders)
