[tool.poetry]
name = "data-expressions"
version = "0.1.0"
description = ""
authors = ["Jung Hoon Son <junghoonson@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.18.15"
jupyter-book = "^0.15.1"
ghp-import = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
