[tool.poetry]
name = "data-expressions"
version = "0.1.0"
description = ""
authors = ["Jung Hoon Son <junghoonson@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.18.15"
jupyter-book = "^0.15.1"
ghp-import = "^2.1.0"
vega-datasets = "^0.9.0"
ipykernel = "^6.25.1"
altair = "^5.0.1"
plotly = "^5.16.1"
pip = "^23.2.1"
install = "^1.3.5"
quantecon-book-theme = {git = "https://github.com/QuantEcon/quantecon-book-theme.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
